<resources>
    <string name="app_name">Where\'s The Money</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint" translatable="true">Type to search</string>

    <string name="summary" translatable="true">View Expenditure Graph</string>
    <string name="title_text">Easy Expenses\nSign In</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="loading">Loading…</string>

    <string name="ok" translatable="true">Ok</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="widget_add_button" translatable="false">+</string>
    <string name="add_expense_description" translatable="true">add expense</string>
    <string name="pref_budget" translatable="true">Monthly budget</string>
    <string name="pref_budget_default" translatable="false">0</string>

    <string name="pref_budget_description" translatable="true">monthly budget</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hint_amount">Enter amount</string>
    <string name="hint_desc">Enter Description</string>
    <string name="widget_text">000</string>
    <string name="pick_date">Pick Date</string>
    <string name="spent">Expenditure</string>
    <string name="available">Amount Available</string>
    <string name="title_activity_currency">CurrencyActivity</string>

    <string name="date">Date</string>
    <string name="base">Selected Currency</string>
    <string name="jpy">JPY: 0.0000</string>
    <string name="eur">EUR: 0.0000</string>
    <string name="gbp">GBP: 0.0000</string>
    <string name="usd">USD: 0.0000</string>
    <string name="inr">INR: 0.0000</string>
    <string name="Enter">Enter</string>
    <string name="base_hint">Enter currency (INR, USD, GBP, EUR or JPY</string>
    <string name="currency">Currency Rates</string>
</resources>