<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.varunkashyap.wheresthemoney.CurrencyActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baseEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="250dp"
        android:singleLine="true"
        android:hint="@string/base_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:id="@+id/enterButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/baseEditText"
        android:layout_toEndOf="@+id/baseEditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencyTextView"
        android:textSize="15sp"
        android:layout_below="@+id/enterButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inr"
        android:id="@+id/rateTextView2"
        android:layout_below="@+id/rateTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:id="@+id/rateTextView1"
        android:textSize="20sp"
        android:layout_below="@+id/dateTextView"
        android:layout_alignRight="@+id/rateTextView3"
        android:layout_alignEnd="@+id/rateTextView3"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gbp"
        android:id="@+id/rateTextView3"
        android:layout_below="@+id/rateTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur"
        android:id="@+id/rateTextView4"
        android:layout_below="@+id/rateTextView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jpy"
        android:id="@+id/rateTextView5"
        android:layout_below="@+id/rateTextView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        android:id="@+id/baseTextView"
        android:layout_below="@+id/enterButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/dateTextView"
        android:layout_below="@+id/baseTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />
</RelativeLayout>