<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ExpenseFragment">

    <EditText
        android:id="@+id/edit_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:hint="@string/hint_amount" />

    <EditText
        android:id="@+id/edit_expense_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_desc" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog" />
</LinearLayout>
