<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_scrollFlags="scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:paddingTop="18dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:paddingTop="15dp"
                android:paddingStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="25sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.SearchView
        android:id="@+id/search_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search_hint" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20dp"
            android:text="@string/spent" />

        <TextView
            android:id="@+id/budget_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="20dp"
            android:text="@string/available" />

        <TextView
            android:id="@+id/budget_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20dp" />
    </FrameLayout>

</android.support.design.widget.AppBarLayout>
